--- a/talks/talks/2024_08-athlete-tidalsim_tracekit.jinja2
+++ b/talks/talks/2024_08-athlete-tidalsim_tracekit.jinja2
@@ -476,7 +476,7 @@ record       instr         tid        record details
       </li>
       <li class="fragment">Implementation of trace analysis framework over published and internal Google DR traces</li>
       <li class="fragment">Comparing accuracy of trace-based scheduler vs execution-driven scheduler changes</li>
-      <li class="fragment">Results are pending publication</li>
+      <!--<li class="fragment">Results are pending publication</li>-->
     </ul>
     <!--Results: to be released soon. Uncovered lots of weirdnesses already. Initial indication is that BBVs and core-level embedding might be sufficient.-->
   </section>
